--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -4,29 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Object-Oriented Programming (OOP) Tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Table of Contents\n",
+    "# Table of Contents\n",
     "1. [Introduction](#introduction)\n",
     "2. [Comparison of Programming Paradigms](#comparison)  \n",
-    " 2.1. [Imperative](#imperative_comparison)  \n",
-    " 2.2. [Functional](#functional_comparison)  \n",
-    " 2.3. [Object-Oriented](#oop_comparison)  \n",
     "3. [More about Object-Oriented Programming](#oop)  \n",
-    " 3.1. [Define a Class & Attributes](#define)  \n",
-    " 3.2. [Initialize Methods](#initialize)  \n",
-    " 3.3. [Instantiating an Object](#instantiate)  \n",
-    "4. [Four Fundamental Principles of Object-Oriented Programming](#fundamental_principles)  \n",
-    " 4.1. [Encapsulation](#encapsulation)  \n",
-    " 4.2. [Abstraction](#abstraction)  \n",
-    " 4.3. [Inheritance](#inheritance)  \n",
-    " 4.4. [Polymorphism](#polymorphism)  \n",
-    "5. [Conclusion](#conclusion)"
+    "4. [Four Fundamental Principles of Object-Oriented Programming](#fundamental_principles)"
    ]
   },
   {
@@ -34,8 +16,7 @@
    "metadata": {},
    "source": [
     "<a id=\"introduction\"></a>\n",
-    "## Introduction\n",
-    "\n",
+    "# Introduction\n",
     "Object-oriented programming, or OOP, is one of the most dominant programming paradigms in modern programming. Its popularity has been steadily increasing, from initial attempts at implementation back in the 1960s to being in some of the most prevalent languages today. As a set of programming concepts and design methodologies, it essentially offers a way of thinking about program structure and organisation.\n",
     "\n",
     "In the following section, we will first look at a comparison of object-oriented programming and two other programming paradigms, namely imperative and functional programming. We will then introduce object-oriented programming in detail, elaborating on the definition and practical implementation of classes, objects and methods in Python. The last section focuses on the four fundamental principles of object-oriented programming, with examples clarifying each principle."
@@ -46,8 +27,7 @@
    "metadata": {},
    "source": [
     "<a id=\"comparison\"></a>\n",
-    "## Comparison of Programming Paradigms\n",
-    "\n",
+    "# Comparison of Programming Paradigms\n",
     "Programming languages are often classified by the programming paradigm they mainly support. The features of each programming language often encourage, or even mandate, structuring the various parts of a program in a specific way. While Python is often referred to as an object-oriented language, it is probably best described as a multi-paradigm programming language as its features also support many other programming paradigms.\n",
     "\n",
     "The main difference between the various paradigms is the way they handle the state of the program, i.e. the values of its variables. Controlling how and where state is transformed in a program has practical implications for how reliable and manageable the code becomes. Each programming pradigm offers a different way of managing state, in the hope that the program does not quickly fall into the trap of \"spaghetti code\", where the code is so badly structured that it becomes too complex to maintain.\n",
@@ -65,8 +45,7 @@
    "metadata": {},
    "source": [
     "<a id=\"imperative_comparison\"></a>\n",
-    "### Imperative\n",
-    "\n",
+    "## Imperative\n",
     "Using the analogy of programming as a problem-solving methodology, imperative programming defines a program as a series of steps, sequentially running each line of code one by one until a solution is found. While this is often the simplest and most intuitive way to structure small programs (like the one in the example below), larger imperative programs have a tendency to become unreliable and unmanageable. \n",
     "\n",
     "So, why do large imperative programs end up this way? This mainly has to do with how, in imperative programs, all variables are global variables. Assigning a value to a variable, like so:\n",
@@ -75,7 +54,7 @@
     "```\n",
     "changes the value of the variable \"x\" globally, i.e. it changes the \"global state\". In small programs with few variables, this is not a major issue, but in large programs with millions of lines and thousands of variables, it is easy to see how a programmer working on one part of the code may accidentally reuse and reassign a variable that another programmer had already used in a different part of the code. The vulnerability of code to changes in the global state means that imperative programming is prone to what is called \"side effects\" (unexpected output occuring due to unexpected input); this therefore makes imperative programming unsuitable for the creation of large programs.\n",
     "\n",
-    "In the following imperative program, we simulate the processes that turn food into solid waste in a human being. "
+    "In the following imperative program, we simulate the processes that turn food into solid waste in a human being."
    ]
   },
   {
@@ -158,8 +137,7 @@
    "metadata": {},
    "source": [
     "<a id=\"functional_comparison\"></a>\n",
-    "### Functional\n",
-    "\n",
+    "## Functional\n",
     "Functional programming attempts to manage complexity by focusing on the use of \"pure functions\" to control the transformation of state. Pure functions are functions that rely only on the given arguments to produce output i.e. they do not rely on any global variables, and by extension, are not affected by unexpected changes in the global state. This makes the program much less vulnerable to side effects, and greatly increases the reliability of the code.\n",
     "\n",
     "In the following functional program, we show how the results of the imperative program above can be achieved using code organised according to the functional programming paradigm."
@@ -201,7 +179,6 @@
     "    print(\"Food is eaten.\")\n",
     "\n",
     "def digest(food):\n",
-    "    \n",
     "    for (i, component) in enumerate(food):\n",
     "        if food[i] == \"Solids\":\n",
     "            print(\"{} are digested into nutrients.\".format(food[i]))\n",
@@ -267,13 +244,13 @@
    "metadata": {},
    "source": [
     "<a id=\"oop_comparison\"></a>\n",
-    "### Object-Oriented Programming\n",
+    "## Object-Oriented Programming\n",
     "\n",
     "The object-oriented programming paradigm, in contrast to the functional programming paradigm, believes that the better way to manage the complexity of code is to group state and function together in structures called \"objects\". After all, in real life, state and function are rarely separated the way it is in functional programming; instead, object-oriented programming tries to organise code in a way that reflects reality, where objects perform functions that transform some state associated with itself.\n",
     "\n",
     "By thinking about \"objects\" instead of \"functions\", programmers can manage the challenges of global state in a different, but arguably just as effective, way.\n",
     "\n",
-    "In the following object-oriented program, we implement the same program as in the previous examples, this time following the  object-oriented programming paradigm."
+    "In the following object-oriented program, we implement the same program as in the previous examples, this time following the object-oriented programming paradigm."
    ]
   },
   {
@@ -385,19 +362,16 @@
    "metadata": {},
    "source": [
     "<a id=\"oop\"></a>\n",
-    "## More about Object-Oriented Programming\n",
+    "# More about Object-Oriented Programming\n",
     "\n",
     "Object-oriented programming (OOP) is based on the idea that we are no longer primarily focused on the logic or actions of our program but rather on the data itself, in particular the objects of our program. While object-oriented programming serves a similar purpose as functional programming i.e. eliminating the global state, it does this differently, by allowing us to store variables in objects rather than functions. Our programming is therefore centered around the objects themselves. \n",
     "\n",
-    "To create and use your own types and create objects of that type, all you need is three simple steps.\n",
+    "To create and use your own types and create objects of that type, all you need is three simple steps:\n",
+    "1. [Define a Class by initializing attributes](#define)\n",
+    "2. [Initialize Methods](#initialize)\n",
+    "3. [Instantiate Objects](#instantiate)\n",
     "\n",
-    "\\begin{gather*}\n",
-    "Step\\:1:\\:Define\\:a\\:Class\\:by\\:initializing\\:attributes \\\\\n",
-    "Step\\:2:\\:Initialize\\:Methods \\\\\n",
-    "Step\\:3:\\:Instantiate\\:Objects \n",
-    "\\end{gather*}\n",
-    "\n",
-    "To illustrate this process more specifically and represent what an object may be, imagine a troop of gorillas. The gorilla as an animalistic species has certain characteristics- a name, height, 2 arms and 2 legs. However exploring every individual gorilla, we find that some of those characteristics vary- for example one animal will be called George and weigh 150 kg, whereas another may be called Harry and weigh 190 kg. The species is the general case of our beast, the class. The individual beast is an instance of our class. This generalization as a class of objects is similar to Plato's concept of the ideal chair that stands for all chairs, or in our case the \"ideal\" gorilla. "
+    "To illustrate this process more specifically and represent what an object may be, imagine a troop of gorillas. The gorilla as an animalistic species has certain characteristics- a name, height, 2 arms and 2 legs. However exploring every individual gorilla, we find that some of those characteristics vary- for example one animal will be called George and weigh 150 kg, whereas another may be called Harry and weigh 190 kg. The species is the general case of our beast, the class. The individual beast is an instance of our class. This generalization as a class of objects is similar to Plato's concept of the ideal chair that stands for all chairs, or in our case the \"ideal\" gorilla."
    ]
   },
   {
@@ -405,9 +379,9 @@
    "metadata": {},
    "source": [
     "<a id=\"define\"></a>\n",
-    "### Step 1: Define a Class & Attributes\n",
+    "## Step 1: Define a Class & Attributes\n",
     "\n",
-    "A class is a blueprint for our generalized object. In our case the gorilla as a species is the class. Let's define our class of the gorilla. Classes are mere descriptions of how our to-be objects should look like. "
+    "A class is a blueprint for our generalized object. In our case the gorilla as a species is the class. Let's define our class of the gorilla. Classes are mere descriptions of how our to-be objects should look like."
    ]
   },
   {
@@ -417,7 +391,6 @@
    "outputs": [],
    "source": [
     "class Gorilla: \n",
-    "    \n",
     "    # Class attribute \n",
     "    species = \"Gorilla\"\n",
     "    \n",
@@ -439,7 +412,7 @@
    "metadata": {},
    "source": [
     "<a id=\"initialize\"></a>\n",
-    "### Step 2: Initialize Methods\n",
+    "## Step 2: Initialize Methods\n",
     "\n",
     "Methods are functions used inside classes that form the behaviour of an object. When we interact with lists, for example, we might use its type's methods such as list.append(), list.count() or list.index(). Similarily, we can define our own methods in our new class."
    ]
@@ -470,8 +443,7 @@
    "metadata": {},
    "source": [
     "<a id=\"instantiate\"></a>\n",
-    "### Step 3: Instantiating an Object \n",
-    "\n",
+    "## Step 3: Instantiating an Object \n",
     "What is an object?\n",
     "Objects are specific instances of classes. In fact, everything in Python is an object in disguise. More specifically, when we instantiate any variable, Python hiobjects are instances of the different types. For example, 'Hello world' is an instance of a string, 123456789 of an integer and \\[a, b, c] of a string. \n",
     "Objects are specific instances of classes. To instantiate our class, we call our class and enter the respective parameters."
@@ -532,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extras: Special Methods\n",
+    "## Extras: Special Methods\n",
     "\n",
     "Class functions that begin with double underscore __ are called special functions in Python. The \\_&#95;init_\\_() function as seen above, is one of them. Using special functions, we can override built-in functions such as +, -, ==, len(), print and many others. "
    ]
@@ -623,11 +595,9 @@
    "metadata": {},
    "source": [
     "<a id=\"fundamental_principles\"></a>\n",
-    "## Four Fundamental Principles of Object-oriented Programming\n",
+    "# Four Fundamental Principles of Object-oriented Programming\n",
     "\n",
-    "<a id=\"encapsulation\"></a>\n",
-    "### Encapsulation\n",
-    "\n",
+    "## Encapsulation\n",
     "Encapsulation refers to the principle of keeping the state of each object private, inside a class. By limiting direct access to this state and only allowing the object's own public setter methods to modify state in the class, this prevents the unintentional spread of changes made in one part of a program to other parts of the program. Encapsulation is especially important in large and complex projects worked on by teams of programmers, where communication between different parts of the program must be carefully managed."
    ]
   },
@@ -691,9 +661,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"abstraction\"></a>\n",
-    "### Abstraction\n",
-    "\n",
+    "## Abstraction\n",
     "Abstraction refers to the principle of displaying essential information by hiding unnecessary information. This is done by creating sub-classes for this unnecessary information. This isolation of the information is similar to inheritance in the aspect of how it is achieved (creating specific sub-classes), but it has its own purpose: simplicity.  \n",
     "\n",
     "This principle may not seem advantageous at first glance. After all, why would we want to hide information about how the tasks of our program are achieved? How exactly does this reduce complexity?   Consider a TV remote. Do we know exactly how each of the buttons on our remote function in everyday usage? Should we be reminded at every press of a button on our remote, that we are making the underlying chip's sensor turn on, producing an electrical signal which is amplified with a transistor, then sent through a LED which finally prompts an infrared light to communicate with our TV?  \n",
@@ -705,9 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"inheritance\"></a>\n",
-    "### Inheritance\n",
-    "\n",
+    "## Inheritance\n",
     "Inheritance refers to how an object-oriented programming language allows the creation of (child) subclasses using the characteristics of an existing parent or superclass. In other words, the child class can inherit attributes from the parent class. By simply inheriting from the parent class, we have inherited all its functionality. Python will travel up the inheritance chain (e.g. Gorilla to Monkey) until it finds the called method (init) to be executed. Now, let's customize our subclass a little bit. Adding methods for the child class is no different than adding methods for the parent class. It is not possible to remove inherited attributes, variables and methods from the subclass, as they do not exist in the subclass. However, it is possible to overwrite them, as shown in the example below."
    ]
   },
@@ -795,9 +761,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"polymorphism\"></a>\n",
-    "### Polymorphism  \n",
-    "\n",
+    "## Polymorphism  \n",
     "Polymorphism is one of the 4 pillars of OOP. It allows our program to process information differently based on their data type. This is achieved through the usage of a generic interface. Let's illustrate this with an example. "
    ]
   },
@@ -853,16 +817,6 @@
     "\n",
     "The principles of Inheritance and Polymorphism go hand in hand. While Inheritance allows our sub-classes to inherit the _same_ attributes and methods as a parent or super-class, Polymorphism allows for these to __differ__ depending on which sub-class they originate from. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"conclusion\"></a>\n",
-    "## Conclusion\n",
-    "\n",
-    "Object-oriented programming as a paradigm proves to be an efficient way of organising code. It enables programmers to conceptualise their coding experience differently. They may now think consider all the different parts of their program as objects interacting amongst one other. The four pillars of OOP capture the very essence of why this may be useful. **Encapsulation** isolates changes made the code, facilitating maintenance. **Abstraction** facilitates and simplifies the complexity of the code. **Inheritance** allows sub-classes to inherit aspects from their parent-class. **Polymorphism** allows sub-classes to interact differently with their parent-classes through a common interface. Both polymorphism and Inheritance go hand in hand, while one allows attributes to be the same as the parent class, the other allows them to differ. All in all, OOP provides the user with empowering and enabling tools which serve to improve the organisation and conceptualization experience of everyday programming. "
-   ]
   }
  ],
  "metadata": {
@@ -881,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
