--- a/04ST Conditionals and Variables.ipynb
+++ b/04ST Conditionals and Variables.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![abc](https://github.com/SebastianTi/Programming-Tutorials/blob/master/imgs/04_Yes_you_can.png)"
+    "![abc](imgs\\04_diameter60.gif)"
    ]
   },
   {
