--- a/04ST Conditionals and Variables.ipynb
+++ b/04ST Conditionals and Variables.ipynb
@@ -79,14 +79,14 @@
    "source": [
     "Big sunflower (diameter = 60cm)|Small sunflower (diameter = 30cm)\n",
     "---|---\n",
-    "<img src=imgs\\04_diameter60.gif  alt=\"bigsunflower\" style=\"width: 500px;\"/>|<img src=\"Programming-Tutorials/imgs/04_diameter30.gif\" alt=\"smallsunflower\" style=\"width: 500px;\"/>\n"
+    "<img src=imgs/04_diameter60.gif  alt=\"bigsunflower\" style=\"width: 500px;\"/>|<img src=\"Programming-Tutorials/imgs/04_diameter30.gif\" alt=\"smallsunflower\" style=\"width: 500px;\"/>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![abc](imgs\\04_diameter60.gif)"
+    "![abc](imgs/04_diameter60.gif)"
    ]
   },
   {
