--- a/04ST Conditionals and Variables.ipynb
+++ b/04ST Conditionals and Variables.ipynb
@@ -86,13 +86,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![abc](imgs/04_diameter60.gif)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "\n",
     "Considering the flowcharts above, it is easy to see that for **different scenarios** (or inputs), the function needs to give **different outputs**. That corresponds to the understanding of conditionals we acquired above and should make it obvious, that the implementation of this task requires some form of **conditional statement ( = orange diamond shape)** and **a codeblock (= blue square)** for every possible scenario.\n",
     "\n",
@@ -200,9 +193,9 @@
     "\n",
     "diameter = 70cm|diameter = 50cm\n",
     "----|----\n",
-    "![diameter 70cm](diameters\\diameter70.gif)|![diameter 50cm](diameters\\diameter50.gif)\n",
+    "![diameter 70cm](imgs/04_loop_diameter70.gif)|![diameter 50cm](imgs/04_loop_diameter50.gif)\n",
     "**diameter = 30cm**|**diameter = 20cm**\n",
-    "![diameter 30cm](diameters\\diameter302.gif)|![diameter 20cm](diameters\\diameter20.gif)\n",
+    "![diameter 30cm](imgs/04_loop_diameter302.gif)|![diameter 20cm](imgs/04_loop_diameter20.gif)\n",
     "\n",
     "\n",
     "-----------------"
