--- a/04ST Conditionals and Variables.ipynb
+++ b/04ST Conditionals and Variables.ipynb
@@ -399,7 +399,7 @@
    "metadata": {},
    "source": [
     "The systematic of the **Ternary Operator** ( in comparison to the ``if - elseif - else`` structure is clarified in the illustration below:\n",
-    "![Systematic of a Ternary Operator](diameters\\comp_if_ternary.png)"
+    "![Systematic of a Ternary Operator](imgs/04_comparison_if_ternary.png)"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Sunflower_Price_Complex_Ternary_Systematic](diameters\\comp_if_ternary_complex.png)"
+    "![Sunflower_Price_Complex_Ternary_Systematic](imgs/04_comparison_if_ternary_complex.png)"
    ]
   },
   {
@@ -679,7 +679,7 @@
     "\n",
     "\n",
     "The ``for - loop`` is commonly used to apply certain operations to **every element** of an iterable container (such as an array for example).  In the example below, **Boris** created a vector ``daily_diameters`` that contains the diameters of all the flowers sold on a certain day. Motivated by his interest in mathematics, **Boris** wants to calculate the surface areas of all the flowers he sold that day. In order to do that, he has to apply this operation to every element in the array ``daily_diameters``:\n",
-    "![formulaforthearea](diameters\\formulaarea.png)\n",
+    "![formulaforthearea](imgs/04_formula_area.png)\n",
     "He decides to implement this using a ``for - loop`` that iterates through ``daily_diameters`` and calculates the surface area of the respective sunflower:\n"
    ]
   },
@@ -713,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"diameters\\ddm4.gif\" alt=\"forloop\" style=\"width: 500px;\"/>\n"
+    "<img src=\"imgs/04_forloop4.gif\" alt=\"forloop\" style=\"width: 500px;\"/>\n"
    ]
   },
   {
@@ -764,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![forloop](diameters\\whileloop2.gif)"
+    "![whileloop](imgs/04_whileloop2.gif)"
    ]
   },
   {
@@ -910,7 +910,7 @@
    "metadata": {},
    "source": [
     "The principle of this nested loop is **\"from the outside (loop) to the inside (loop)\"** and is exemplified in the animation below. Note, that we can use <br/>``break - statements`` in the context of a nested loop, but that it will end both loops, not just the inner one.\n",
-    "<img src=\"diameters\\nestedloop.gif\" alt=\"Drawing\" style=\"width: 500px;\"/>"
+    "<img src=\"imgs/04_nestedloop.gif\" alt=\"nestedloop\" style=\"width: 500px;\"/>"
    ]
   },
   {
@@ -1044,7 +1044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Sunflowerbanner2](diameters\\sunflower_banner.png)"
+    "![Sunflowerbanner2](imgs/04_sunflower_banner.png)"
    ]
   },
   {
