--- a/04ST Conditionals and Variables.ipynb
+++ b/04ST Conditionals and Variables.ipynb
@@ -399,7 +399,7 @@
    "metadata": {},
    "source": [
     "The systematic of the **Ternary Operator** ( in comparison to the ``if - elseif - else`` structure is clarified in the illustration below:\n",
-    "![Systematic of a Ternary Operator](imgs/04_comparison_if_ternary.png)"
+    "![Systematic of a Ternary Operator](imgs/04_comparison_if_ternary.PNG)"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Sunflower_Price_Complex_Ternary_Systematic](imgs/04_comparison_if_ternary_complex.png)"
+    "![Sunflower_Price_Complex_Ternary_Systematic](imgs/04_comparison_if_ternary_complex.PNG)"
    ]
   },
   {
@@ -679,7 +679,7 @@
     "\n",
     "\n",
     "The ``for - loop`` is commonly used to apply certain operations to **every element** of an iterable container (such as an array for example).  In the example below, **Boris** created a vector ``daily_diameters`` that contains the diameters of all the flowers sold on a certain day. Motivated by his interest in mathematics, **Boris** wants to calculate the surface areas of all the flowers he sold that day. In order to do that, he has to apply this operation to every element in the array ``daily_diameters``:\n",
-    "![formulaforthearea](imgs/04_formula_area.png)\n",
+    "![formulaforthearea](imgs/04_formula_area.PNG)\n",
     "He decides to implement this using a ``for - loop`` that iterates through ``daily_diameters`` and calculates the surface area of the respective sunflower:\n"
    ]
   },
@@ -1044,7 +1044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Sunflowerbanner2](imgs/04_sunflower_banner.png)"
+    "![Sunflowerbanner2](imgs/04_sunflower_banner.PNG)"
    ]
   },
   {
