Update 04ST Conditionals and Variables.ipynb

--- a/04ST Conditionals and Variables.ipynb
+++ b/04ST Conditionals and Variables.ipynb
@@ -41,7 +41,7 @@
     "# Conditionals\n",
     "***\n",
     "\n",
-    "<a id='conditionals'></a>\n",
+    "<a name='conditionals'></a>\n",
     "As humans, our everyday life is characterized by numerous conscious and unconscious decisions. If it is sunny in the morning, we decide to wear sunglasses. If it is rainy, we bring an umbrella. If it is cold, we wear a jacket. While those decisions seem to be common sense to us, it is anything but common sense for a computer or a program. \n",
     "\n",
     "Lacking even the smallest amount of situational judgement, the machine has to be given precise definitions of scenarios and consequences in order to act accordingly. More technically speaking, we define **conditionals** that can either be ``TRUE`` or ``FALSE`` (i.e. they are of type ``bool``) and depending on the outcome, we **evaluate different blocks of code**. As those **conditionals** are designed to **alter the flow of the code** (depending on the scenario) literature often captures respective chapters with **\"Control Flow\"**.\n",
