fixed the table of contents

--- a/08_Dynamic_Programming_Tutorial_v2.ipynb
+++ b/08_Dynamic_Programming_Tutorial_v2.ipynb
@@ -5,19 +5,25 @@
    "metadata": {},
    "source": [
     "# Table of Contents\n",
-    "[A General Introduction](#intro)\n",
-    "    [Formulation of the  Problem](#formulation)\n",
-    "    [Dynamic Programming Approach](#approach)\n",
-    "    \n",
-    "[1. Dynamic Programming: Fibonacci numbers](#elementary) \n",
-    "    [1.1 Recursive](#recursive)\n",
-    "    [1.2 Memorization](#memo)\n",
-    "    [1.3 Dynamic Programming](#dp)\n",
-    "    \n",
-    "3. [Our Model on the Life-Cycle of Human Capital](#our)\n",
-    "4. [Dynamic Programming](#dynamic)\n",
-    "5. [Model Solution](#solution)\n",
-    "6. [Simulation of the Life of an Agent](#simulation)"
+    "[A General Introduction](#general_intro) <br>\n",
+    "&#160; [Formulation of the  Problem](#formulation)<br>\n",
+    "&#160; [Dynamic Programming Approach](#approach)<br>\n",
+    "<br>\n",
+    "1. [Dynamic Programming: Fibonacci numbers](#elementary) <br>\n",
+    "    1.1 [Recursive](#recursive)<br>\n",
+    "    1.2 [Memorization](#memo)<br>\n",
+    "    1.3 [Dynamic Programming](#DP)<br>\n",
+    "    1.4 [Time Comparison](#compare)<br>\n",
+    "<br>\n",
+    "2. [Second example: 0-1 knapsack problem](#knapsack)<br>\n",
+    "    2.1 [Transition Equation](#TE)<br>\n",
+    "<br>\n",
+    "3. [Stochastic Dynamic Programming](#SDP)<br>\n",
+    "    [A Gambling Game](#gamble)<br>\n",
+    "    3.1 [Naive Dynamic Programming Approach](#naive)<br>\n",
+    "    3.2 [Dynamic Programming with Discrete State Space](#DSS)<br>\n",
+    "    3.3 [Visualization](#visualize)<br>\n",
+    "    3.4 [Model Comparison](#MP)<br>\n"
    ]
   },
   {
@@ -37,9 +43,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"general_intro\"></a>\n",
     "# A General Introduction\n",
+    "\n",
     "In mathematics, a problem of constrained multi-period optimization falls into the domain of **dynamic optimization**, of which we will give a brief outline. Our goal is to  introduce two concepts: *backward induction* and the *principle of optimality*.\n",
     "\n",
+    "<a id=\"formulation\"></a>\n",
     "## Formulation of the  Problem \n",
     "Dynamic optimization is concerned  with finding the solution to the optimization of  an objective function, call it $V$. It is defined over multiple time periods and subject to constraints, at least one of which is dynamic. The latter means that it is expressed either as a difference or a differential equation, depending on whether time is discrete or continuous. Of course, dynamic optimization is a major field  in its own right and in order to keep our discussion somewhat contained, we will limit ourselves to studying the simple case when\n",
     "\n",
@@ -64,6 +73,7 @@
     " \n",
     "which can be written more parsimonously as $$V_0(z_0,x_0) = f(z_0, x_0) + \\beta V_1(x_1)$$ where the subscripts indicate the period the argument starts from. This means that the value of the objective function in any period is the sum of the value from the current period's decision and the discounted value of the decision sequence from the next period onwards.\n",
     "\n",
+    "<a id=\"approach\"></a>\n",
     "## Dynamic Programming Approach\n",
     "There are different strategies that can be used to derive the solution. We will rely on the dynamic programming approach. It relies on the **principle of optimality**, due to [Bellman (1957)](https://www.rand.org/content/dam/rand/pubs/papers/2008/P550.pdf), which states that\n",
     "> *\"An optimal policy has the property that whatever the initial state and initial decision are, the remaining decisions must constitute an optimal policy with regard to the state resulting from the first decision.\"* \n",
@@ -83,6 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"elementary\"></a>\n",
     "# 1. Dynamic Programming: Fibonacci numbers"
    ]
   },
@@ -101,6 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"recursive\"></a>\n",
     "## 1.1 Recursive\n",
     "One method is to do this recursively. The ways of going up 10 steps equal to the sum of going up 9 steps and going up 9 steps.\n",
     "\n",
@@ -162,6 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"memo\"></a>\n",
     "## 1.2 Memorization"
    ]
   },
@@ -206,6 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"DP\"></a>\n",
     "## 1.3 Dynamic Programming"
    ]
   },
@@ -254,6 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"compare\"></a>\n",
     "## 1.4 Time Comparison "
    ]
   },
@@ -333,6 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"knapsack\"></a>\n",
     "# 2. second example: 0-1 knapsack problem\n",
     "The problem above is the simplest question in dynamic programming area since it only has one dimension. Now we are going to introduce a more complecated one."
    ]
@@ -440,6 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"TE\"></a>\n",
     "## 2.1 Transition Equation\n",
     "We could introduce a formula to solve this problem. The formula is \n",
     "![grid](imgs/08_dp17.png)"
@@ -543,7 +560,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
+    "<a id=\"SDP\"></a>\n",
     "# 3. Stochastic Dynamic Programming\n",
     "\n",
     "Since the presented problem is stochastic, we will generalize the above-mentioned notation from the deterministic to the stochastic case: \n",
@@ -551,6 +568,7 @@
     "or for a discrete state space\n",
     "$$ V_t(x_t) = \\max_{z_t} \\left \\{ E_t [ f(z_t,x_t) ] + \\beta \\sum_{x_{t+1}} Pr(x_{t+1}| z_t) V_{t+1}(x_{t+1}) \\right \\}, \\quad \\forall t \\in \\{0,1,\\ldots,T\\}$$\n",
     "\n",
+    "<a id=\"gamble\"></a>\n",
     "## A Gambling Game\n",
     "\n",
     "Consider the following problem. An individual can participate in a gamble G times. Every time they can choose a bet out of the set $\\Omega$. For example, they can set a bet $b \\in \\{0,1,2\\}$. With probability $p_{win}$, the bet is won and the player will receive his bet doubled. The player will lose the bet with probablity $p_{loss}=(1-p_{win})$. They start with wealth $W_0$. After the last round of the game, they can consume their attained wealth $W_G$ and derive utility $u(W_{G})$ from it. Furthermore, a bet can never exceed the amount of wealth of a player. Note that this game is related to the [**St. Petersburg Paradox**](https://en.wikipedia.org/wiki/St._Petersburg_paradox).\n",
@@ -564,7 +582,7 @@
     "Additionally, we have $w_{g+1} = w_g+b_g$, if the game is won, and $w_{g+1} = w_g-b_g$, if it is lost.\n",
     "Now that we have mastered the theory we want to implement the theory into code. \n",
     "Our first approach will be one where we solve the model recursively.  We do so by simply formulating a function that calls on itself.\n",
-    "\n",
+    "<a id=\"naive\"></a>\n",
     "## 3.1 Naive Dynamic Programming Approach"
    ]
   },
@@ -698,6 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"DSS\"></a>\n",
     "## 3.2 Dynamic Programming with Discrete State Space\n",
     "As we have seen, using an approach that relies on a recursive implementation of backward induction  yields an exponentially increasing time to solve the model as more time periods are added. This phenomenon is an example of the **curse of dimensionality**, which describes a situation in  data analysis in which an algorithm applied to a  high-dimensional problem (i.e. a problem with many model features /  parameters / time-periods, etc.) encounters difficulties that are not visible in the same but lower dimensional problem (with fewer features / parameters / time-periods). In our case, the underlying reason for the occurrence of this curse is that each time our value function is called, it has to compute all combinations of possible decision sequences. As more time periods are added, the space of possible sequences becomes disproportionally larger so that the computation time also increases exponentially.   \n",
     "\n",
@@ -875,6 +894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"visualize\"></a>\n",
     "## 3.3 Visualization"
    ]
   },
@@ -1073,6 +1093,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"MP\"></a>\n",
     "## 3.4 Model Comparison"
    ]
   },
