--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of Contents\n",
+    "# Table\n",
     "1. [Introduction](#introduction)\n",
     "2. [Comparison of Programming Paradigms](#comparison)  \n",
     "3. [More about Object-Oriented Programming](#oop)  \n",
@@ -835,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
