--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of \n",
+    "# Hello\n",
     "1. [Introduction](#introduction)\n",
     "2. [Comparison of Programming Paradigms](#comparison)  \n",
     "3. [More about Object-Oriented Programming](#oop)  \n",
